# grammer-check

./: .gitignore  README.md  package-lock.json  package.json  start_app.sh  stop_app.sh
backend/: pyproject.toml
backend/app/: db.py  server.py  test_db.py
backend/app/api/: user.py
src/: App.tsx
src/components/: AudioRecorder.tsx  Feedback.tsx  Home.tsx  Task.tsx
