[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Jiadai He <jiadai.he@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.34.0"
fastapi = "^0.111.0"
boto3 = "^1.34.125"
openai-whisper = {git = "https://github.com/openai/whisper.git"}
pytest = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
